Fixed blurry content of model dialog under uneven height (#350)

--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -24,11 +24,8 @@
   background-color: white;
   background-clip: padding-box;
   border: 1px solid @admin-dialog-border;
+  border-bottom: 0px;
   box-sizing: border-box;
-
-  &.uneven-height {
-    border-bottom: 2px solid transparent;
-  }
 
   .form-view {
     padding-left: 0px !important;
